--- a/application/views/data/show-buy.pug
+++ b/application/views/data/show-buy.pug
@@ -36,7 +36,7 @@ block content
                 | Contrato não disponível
 
           if(data.type=='Raw')
-            a.btn.btn-primary.btn-sm.mr-4(href='/process-request?search='+data.key)
+            a.btn.btn-secondary.btn-sm.mr-4(href='/process-request?search='+data.key)
               if(language == 'en')
                 | See Processing Request
               else 
