--- a/application/views/processableData/components/buy-modal.pug
+++ b/application/views/processableData/components/buy-modal.pug
@@ -2,7 +2,7 @@
   .modal-dialog(role='document')
     .modal-content
       .modal-header
-        If(language == 'en')
+        if(language == 'en')
           h5#exampleModalLabel.modal-title Confirm buying?
         else 
           h5#exampleModalLabel.modal-title Confirmar compra?
